config/gateway/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: milo-os-com
addressType: FQDN
ports:
  - name: https
    protocol: TCP
    appProtocol: https
    port: 443
endpoints:
  - addresses:
      - 'milo-os-com.staging.env.datum.net'
    conditions:
      ready: true
