config/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: milo-os-com-http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: milo-os-com-gateway
  rules:
    - backendRefs:
        - group: discovery.k8s.io
          kind: EndpointSlice
          name: milo-os-com
          port: 443
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: 'milo-os-com.staging.env.datum.net'
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 25s
        request: 25s
